--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "@ngx-loading-bar/router": "^5.1.2",
     "@ngx-translate/core": "^14.0.0",
     "@ngx-translate/http-loader": "^7.0.0",
-    "@swimlane/ngx-charts": "^23.1.0",
+    "@swimlane/ngx-charts": "^19.2.0",
     "@swimlane/ngx-datatable": "^20.0.0",
     "@types/d3-shape": "^3.0.2",
     "acorn": "^8.6.0",
@@ -51,10 +51,10 @@
     "angular-sweetalert-2": "^1.0.1",
     "apexcharts": "^3.32.0",
     "bootstrap": "^5.1.3",
-    "browser-sync": "^3.0.4",
+    "browser-sync": "^2.27.7",
     "chart.js": "^2.9.4",
     "core-js": "^3.20.0",
-    "echarts": "^6.0.0",
+    "echarts": "^4.9.0",
     "jquery": "^3.6.0",
     "mat-select-filter": "^2.4.1",
     "mat-table-exporter": "^10.2.4",
@@ -72,7 +72,7 @@
     "ngx-gauge": "^4.0.0",
     "ngx-mask": "^13.0.1",
     "ngx-material-file-input": "^3.0.0",
-    "ngx-material-timepicker": "^13.1.1",
+    "ngx-material-timepicker": "^5.5.3",
     "ngx-pagination": "^6.0.3",
     "ngx-perfect-scrollbar": "^10.1.1",
     "ngx-sharebuttons": "8.0.5",
@@ -84,14 +84,14 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^21.0.0",
-    "@angular/cli": "^21.0.0",
+    "@angular-devkit/build-angular": "~13.1.2",
+    "@angular/cli": "^13.1.2",
     "@angular/compiler-cli": "^13.1.1",
     "@angular/language-service": "^13.1.1",
     "@types/jasmine": "~3.10.2",
     "@types/jasminewd2": "~2.0.10",
     "@types/node": "^17.0.2",
-    "codelyzer": "^0.0.28",
+    "codelyzer": "^6.0.2",
     "del": "^6.0.0",
     "install": "^0.13.0",
     "jasmine-core": "~3.10.1",
@@ -101,7 +101,7 @@
     "karma-coverage-istanbul-reporter": "~3.0.3",
     "karma-jasmine": "~4.0.1",
     "karma-jasmine-html-reporter": "^1.7.0",
-    "protractor": "^6.0.0",
+    "protractor": "~7.0.0",
     "run-sequence": "^2.2.1",
     "ts-node": "~10.4.0",
     "tslint": "~6.1.3",
